# AI-Agent-Studio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  task.md
backend/app/: config.py  main.py
backend/app/middleware/: __init__.py  token_logger.py
backend/app/models/: evaluation.py  messages.py  playbook.py  project.py
backend/app/routers/: __init__.py  chat.py  evaluations.py  export.py  generate.py  playbooks.py  templates.py  tools.py
backend/app/services/: agent_factory.py  canvas_generator.py  evaluation_runner.py  evaluation_store.py  exporter.py  memory_store.py  playbook_store.py  project_validator.py  team_manager.py  tool_catalog.py  tool_factory.py
backend/deliverables/backend-python/: .env.example  README.md  agent_factory.py  graph_builder.py  main.py  requirements.txt  tool_factory.py
backend/deliverables/backend-python/tools/: cached_googlesearch.py  calculator.py  calculator_tools.py  clickup.py  confluence.py  csv_toolkit.py  discord.py  enhanced_pandas_tools.py  google_web_search.py  jira.py  neo4j_tool.py  newspaper_tool.py  pandas_tools.py  yahoo_finance.py  yfinance_tool.py  youtube.py
backend/deliverables/frontend/: README.md  index.html  tailwind.config.ts
backend/deliverables/frontend/src/: index.css
backend/deliverables/frontend/src/hooks/: useChat.tsx
backend/deploy/: README.md  containerapp.bicep  webapp.bicep
backend/templates/: README.md  devops-bot.json  rag-bot.json  support-bot.json
frontend/: .env.example  index.html  (+2 more)
(+36 files in other folders)
